Force node updates before projecting a newly imported document

BUG: 448256
(cherry picked from commit 5951c2b8090c7faf2cdee6450ca0500ace09c433)